replace jquery file upload with filepond (idaholab/Malcolm#235, work in progress)

--- a/file-upload/site/index.html
+++ b/file-upload/site/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>File Upload</title>
-    <link href="filepond/dist/filepond.css" rel="stylesheet">
-    <link href="@jcubic/tagger/tagger.css" rel="stylesheet">
+    <link href="upload/filepond/dist/filepond.css" rel="stylesheet">
+    <link href="upload/@jcubic/tagger/tagger.css" rel="stylesheet">
     <style>
         .tagger > ul > li:not(.tagger-new) > :first-child {
             background: #369763 !important;
@@ -55,12 +55,12 @@
 
     </form>
 
-    <script src="@jcubic/tagger/tagger.js"></script>
-    <script src="filepond/dist/filepond.js"></script>
-    <script src="filepond-plugin-file-rename/dist/filepond-plugin-file-rename.js"></script>
-    <script src="filepond-plugin-file-metadata/dist/filepond-plugin-file-metadata.js"></script>
-    <script src="filepond-plugin-file-validate-type/dist/filepond-plugin-file-validate-type.js"></script>
-    <script src="filepond-plugin-file-validate-size/dist/filepond-plugin-file-validate-size.js"></script>
+    <script src="upload/@jcubic/tagger/tagger.js"></script>
+    <script src="upload/filepond/dist/filepond.js"></script>
+    <script src="upload/filepond-plugin-file-rename/dist/filepond-plugin-file-rename.js"></script>
+    <script src="upload/filepond-plugin-file-metadata/dist/filepond-plugin-file-metadata.js"></script>
+    <script src="upload/filepond-plugin-file-validate-type/dist/filepond-plugin-file-validate-type.js"></script>
+    <script src="upload/filepond-plugin-file-validate-size/dist/filepond-plugin-file-validate-size.js"></script>
 
     <script>
 
