replace jquery file upload with filepond (idaholab/Malcolm#235, work in progress)

--- a/file-upload/site/index.html
+++ b/file-upload/site/index.html
@@ -65,7 +65,7 @@
 
         <input type="text" name="tags"/>
         <br>
-        <button type="submit" class="button button_rounded">Commit Uploaded Files</button>
+        <button type="submit" id="commit_button" class="button button_rounded">Commit Uploaded Files</button>
         <input type="file" name="filepond[]" multiple>
 
     </form>
@@ -80,6 +80,11 @@
     <script>
 
         window.addEventListener("DOMContentLoaded", function () {
+
+            const form_button = document.getElementById("commit_button");
+            form_button.disabled = true;
+            form_button.style.backgroundColor = '#cccccc';
+            form_button.style.color = '#666666';
 
             FilePond.registerPlugin(
                 FilePondPluginFileMetadata,
@@ -140,12 +145,34 @@
             form.addEventListener("submit", setFileTags);
             function setFileTags(e) {
                 const files = pond.getFiles();
-                valid = ((files) && (files.length > 0));
+                valid = ((files) && (files.length > 0) && (!form_button.disabled));
                 if (!valid) {
                     e.preventDefault();
                 }
                 return valid;
             }
+
+            pond.on('addfilestart', (file) => {
+                form_button.disabled = true;
+                form_button.style.backgroundColor = '#cccccc';
+                form_button.style.color = '#666666';
+            });
+            pond.on('processfiles', () => {
+                form_button.disabled = false;
+                form_button.style.backgroundColor = '#369763';
+                form_button.style.color = '#ffffff';
+            });
+            function checkSubmitEnabler() {
+                const files = pond.getFiles();
+                const isLoading = files.filter(x=>x.status !== 5).length !== 0;
+                if ((files.length > 0) && (!isLoading)) {
+                    form_button.disabled = false;
+                    form_button.style.backgroundColor = '#369763';
+                    form_button.style.color = '#ffffff';
+                }
+            }
+            setInterval(checkSubmitEnabler, 5000);
+
 
         })
     </script>
