landingpage work in progress (idaholab/Malcolm#252)

--- a/file-upload/site/index.html
+++ b/file-upload/site/index.html
@@ -58,7 +58,7 @@
     </style>
 </head>
 <body>
-    <img class="center imgcenter" src="upload/Malcolm_banner.png" alt="%SITE_NAME%">
+    <img class="center imgcenter" src="upload/Malcolm_banner.png">
     <h1 class="panel-title">Network Traffic Artifact Upload</h1>
 
     <form id="commit_files" action="server/php/submit.php" method="post" enctype="multipart/form-data">
