--- a/nginx/landingpage/index.html
+++ b/nginx/landingpage/index.html
@@ -52,7 +52,7 @@
     <body class="bg-dark">
         <br />
         <div>
-            <img class="imgcenter center" src="assets/imgs/Malcolm_banner_white.png" alt="%SITE_NAME%"> 
+            <img class="imgcenter center" src="assets/imgs/Malcolm_outline_banner_dark.png">
         </div>
 
         <br />
@@ -64,25 +64,25 @@
                 <div class="card bg-dark">
                     <img src="assets/imgs/Arkime_Logo_FullGradientWhite_Square.png" alt="Arkime" class="image" style="width:100%">
                     <div class="middle">
-                        <a href="https://localhost/sessions/" class="btn btn-primary" target="_blank">Arkime</a>
+                        <a href="/sessions/" class="btn btn-primary" target="_blank">Arkime</a>
                     </div>
                 </div>
                 <div class="card bg-dark">
                     <img src="assets/imgs/icon.png" alt="Upload" class="image" style="width:100%">
                     <div class="middle">
-                        <a href="https://localhost/upload/" class="btn btn-primary" target="_blank">Upload</a>
+                        <a href="/upload/" class="btn btn-primary" target="_blank">Upload</a>
                     </div>
                 </div>
                 <div class="card bg-dark">
                     <img src="assets/imgs/markdown.png" alt="ReadMe" class="image" style="width:100%">
                     <div class="middle">
-                        <a href="https://localhost/readme/" class="btn btn-primary" target="_blank">ReadMe</a>
+                        <a href="/readme/" class="btn btn-primary" target="_blank">ReadMe</a>
                     </div>
                 </div>
                 <div class="card bg-dark">
-                    <img src="assets/imgs/opensearch.png" alt="Opensearch" class="image" style="width:100%">
+                    <img src="assets/imgs/opensearch_mark_darkmode.svg" alt="Opensearch" class="image" style="width:100%">
                     <div class="middle">
-                        <a href="https://localhost/dashboards/" class="btn btn-primary" target="_blank">Opensearch</a>
+                        <a href="/dashboards/" class="btn btn-primary" target="_blank">Opensearch</a>
                     </div>
                 </div>
             </div>
@@ -90,25 +90,25 @@
                 <div class="card bg-dark">
                     <img src="assets/imgs/netbox_icon.svg" alt="NetBox" class="image" style="width:100%">
                     <div class="middle">
-                        <a href="https://localhost/netbox/" class="btn btn-primary" target="_blank">Netbox</a>
+                        <a href="/netbox/" class="btn btn-primary" target="_blank">Netbox</a>
                     </div>
                 </div>
                 <div class="card bg-dark">
                     <img src="assets/imgs/lock.png" alt="Auth" class="image" style="width:100%">
                     <div class="middle">
-                        <a href="https://localhost/auth/" class="btn btn-primary" target="_blank">Admin Access</a>
+                        <a href="/auth/" class="btn btn-primary" target="_blank">Admin Access</a>
                     </div>                
                 </div>
                 <div class="card bg-dark">
-                    <img src="assets/imgs/cyberchef.svg" alt="Auth" class="image" style="width:100%">
+                    <img src="assets/imgs/cyberchef_hat_text_512.png" alt="Auth" class="image" style="width:100%">
                     <div class="middle">
-                        <a href="https://localhost/cyberchef/" class="btn btn-primary" target="_blank">CyberChef</a>
+                        <a href="/cyberchef/" class="btn btn-primary" target="_blank">CyberChef</a>
                     </div>                
                 </div>
                 <div class="card bg-dark">    
                     <img src="assets/imgs/api.png" alt="API" class="image" style="width:100%">
                     <div class="middle">
-                        <a href="https://localhost/mapi/" class="btn btn-primary" target="_blank">API</a>
+                        <a href="/mapi/" class="btn btn-primary" target="_blank">API</a>
                     </div>             
                 </div>
             </div>
@@ -119,7 +119,7 @@
             <h3 style="color:white">External Links</h3>
             <div class="card-group">
                 <div class="card bg-dark">
-                    <img src="assets/imgs/github-mark-white.svg" alt="Auth" class="image" style="width:100%">
+                    <img src="assets/imgs/GitHub-Mark-Light-120px-plus.png" alt="Auth" class="image" style="width:100%">
                     <div class="middle">
                         <a href="https://github.com/cisagov/Malcolm" class="btn btn-primary" target="_blank">GitHub</a>
                     </div>                
