landingpage work in progress (idaholab/Malcolm#252)

--- a/nginx/landingpage/index.html
+++ b/nginx/landingpage/index.html
@@ -64,7 +64,7 @@
                 <div class="card bg-dark">
                     <img src="assets/imgs/Arkime_Logo_FullGradientWhite_Square.png" alt="Arkime" class="image" style="width:100%">
                     <div class="middle">
-                        <a href="/sessions/" class="btn btn-primary" target="_blank">Arkime</a>
+                        <a href="/arkime/" class="btn btn-primary" target="_blank">Arkime</a>
                     </div>
                 </div>
                 <div class="card bg-dark">
@@ -82,7 +82,7 @@
                 <div class="card bg-dark">
                     <img src="assets/imgs/opensearch_mark_darkmode.svg" alt="Opensearch" class="image" style="width:100%">
                     <div class="middle">
-                        <a href="/dashboards/" class="btn btn-primary" target="_blank">Opensearch</a>
+                        <a href="/dashboards/" class="btn btn-primary" target="_blank">Dashboards</a>
                     </div>
                 </div>
             </div>
@@ -90,13 +90,13 @@
                 <div class="card bg-dark">
                     <img src="assets/imgs/netbox_icon.svg" alt="NetBox" class="image" style="width:100%">
                     <div class="middle">
-                        <a href="/netbox/" class="btn btn-primary" target="_blank">Netbox</a>
+                        <a href="/netbox/" class="btn btn-primary" target="_blank">NetBox</a>
                     </div>
                 </div>
                 <div class="card bg-dark">
                     <img src="assets/imgs/lock.png" alt="Auth" class="image" style="width:100%">
                     <div class="middle">
-                        <a href="/auth/" class="btn btn-primary" target="_blank">Admin Access</a>
+                        <a href="/auth/" class="btn btn-primary" target="_blank">Local Account Management</a>
                     </div>                
                 </div>
                 <div class="card bg-dark">
@@ -121,7 +121,7 @@
                 <div class="card bg-dark">
                     <img src="assets/imgs/GitHub-Mark-Light-120px-plus.png" alt="Auth" class="image" style="width:100%">
                     <div class="middle">
-                        <a href="https://github.com/cisagov/Malcolm" class="btn btn-primary" target="_blank">GitHub</a>
+                        <a href="https://github.com/idaholab/Malcolm" class="btn btn-primary" target="_blank">GitHub</a>
                     </div>                
                 </div>
                 <div class="card bg-dark">             
