landingpage work in progress (idaholab/Malcolm#252)

--- a/nginx/landingpage/index.html
+++ b/nginx/landingpage/index.html
@@ -100,7 +100,7 @@
                     </div>                
                 </div>
                 <div class="card bg-dark">
-                    <img src="assets/imgs/cyberchef_hat_text_512.png" alt="Auth" class="image" style="width:100%">
+                    <img src="assets/imgs/cyberchef.svg" alt="Auth" class="image" style="width:100%">
                     <div class="middle">
                         <a href="/cyberchef/" class="btn btn-primary" target="_blank">CyberChef</a>
                     </div>                
