landingpage work in progress (idaholab/Malcolm#252)

--- a/nginx/landingpage/index.html
+++ b/nginx/landingpage/index.html
@@ -102,7 +102,7 @@
                 <div class="card bg-dark">
                     <img src="assets/imgs/cyberchef.svg" alt="Auth" class="image" style="width:100%">
                     <div class="middle">
-                        <a href="/cyberchef/" class="btn btn-primary" target="_blank">CyberChef</a>
+                        <a href="/arkime/cyberchef/" class="btn btn-primary" target="_blank">CyberChef</a>
                     </div>                
                 </div>
                 <div class="card bg-dark">    
