landingpage work in progress (idaholab/Malcolm#252)

--- a/nginx/landingpage/index.html
+++ b/nginx/landingpage/index.html
@@ -52,7 +52,7 @@
     <body class="bg-dark">
         <br />
         <div>
-            <img class="imgcenter center" src="assets/imgs/Malcolm_outline_banner_dark.png">
+            <img class="imgcenter center" src="readme/docs/images/logo/Malcolm_outline_banner_dark.png">
         </div>
 
         <br />
@@ -68,13 +68,13 @@
                     </div>
                 </div>
                 <div class="card bg-dark">
-                    <img src="assets/imgs/icon.png" alt="Upload" class="image" style="width:100%">
+                    <img src="assets/imgs/upload.svg" alt="Upload" class="image" style="width:100%">
                     <div class="middle">
                         <a href="/upload/" class="btn btn-primary" target="_blank">Upload</a>
                     </div>
                 </div>
                 <div class="card bg-dark">
-                    <img src="assets/imgs/markdown.png" alt="ReadMe" class="image" style="width:100%">
+                    <img src="assets/imgs/help-square-rounded.svg" alt="ReadMe" class="image" style="width:100%">
                     <div class="middle">
                         <a href="/readme/" class="btn btn-primary" target="_blank">ReadMe</a>
                     </div>
@@ -94,7 +94,7 @@
                     </div>
                 </div>
                 <div class="card bg-dark">
-                    <img src="assets/imgs/lock.png" alt="Auth" class="image" style="width:100%">
+                    <img src="assets/imgs/users-group.svg" alt="Auth" class="image" style="width:100%">
                     <div class="middle">
                         <a href="/auth/" class="btn btn-primary" target="_blank">Local Account Management</a>
                     </div>                
@@ -106,7 +106,7 @@
                     </div>                
                 </div>
                 <div class="card bg-dark">    
-                    <img src="assets/imgs/api.png" alt="API" class="image" style="width:100%">
+                    <img src="assets/imgs/api.svg" alt="API" class="image" style="width:100%">
                     <div class="middle">
                         <a href="/mapi/" class="btn btn-primary" target="_blank">API</a>
                     </div>             
