landingpage work in progress (idaholab/Malcolm#252)

--- a/nginx/landingpage/index.html
+++ b/nginx/landingpage/index.html
@@ -68,13 +68,13 @@
                     </div>
                 </div>
                 <div class="card bg-dark">
-                    <img src="assets/imgs/upload.svg" alt="Upload" class="image" style="width:100%">
+                    <img src="assets/imgs/upload.svg" alt="Upload" class="image" style="width:100%;filter: invert(1)">
                     <div class="middle">
                         <a href="/upload/" class="btn btn-primary" target="_blank">Upload</a>
                     </div>
                 </div>
                 <div class="card bg-dark">
-                    <img src="assets/imgs/help-square-rounded.svg" alt="ReadMe" class="image" style="width:100%">
+                    <img src="assets/imgs/help-square-rounded.svg" alt="ReadMe" class="image" style="width:100%;filter: invert(1)">
                     <div class="middle">
                         <a href="/readme/" class="btn btn-primary" target="_blank">ReadMe</a>
                     </div>
@@ -94,7 +94,7 @@
                     </div>
                 </div>
                 <div class="card bg-dark">
-                    <img src="assets/imgs/users-group.svg" alt="Auth" class="image" style="width:100%">
+                    <img src="assets/imgs/users-group.svg" alt="Auth" class="image" style="width:100%;filter: invert(1)">
                     <div class="middle">
                         <a href="/auth/" class="btn btn-primary" target="_blank">Local Account Management</a>
                     </div>                
@@ -106,7 +106,7 @@
                     </div>                
                 </div>
                 <div class="card bg-dark">    
-                    <img src="assets/imgs/api.svg" alt="API" class="image" style="width:100%">
+                    <img src="assets/imgs/api.svg" alt="API" class="image" style="width:100%;filter: invert(1)">
                     <div class="middle">
                         <a href="/mapi/" class="btn btn-primary" target="_blank">API</a>
                     </div>             
