--- a/nginx/landingpage/index.html
+++ b/nginx/landingpage/index.html
@@ -41,21 +41,21 @@
                         <div class="features-icons-item mx-auto mb-0 mb-lg-3">
                             <a href="/dashboards/"><img style='max-width: 35%; height: auto; object-fit: contain' src="assets/img/opensearch_mark_default.svg"/>
                             <h3>Dashboards</h3></a>
-                            <p class="lead mb-0">Visualize traffic or track down security concerns with dozens of pre-built dashboards, or create your own</p>
+                            <p class="lead mb-0">Visualize traffic or track down security concerns with dozens of <a href="/readme/docs/dashboards.html#PrebuiltVisualizations">pre-built dashboards</a>, or <a href="/readme/docs/dashboards.html#BuildDashboard">create your own</a></p>
                         </div>
                     </div>
                     <div class="col-lg-3">
                         <div class="features-icons-item mx-auto mb-5 mb-lg-3">
                             <a href="/arkime/"><img style='width: 19%; height: 19%; object-fit: contain' src="assets/img/Arkime_Logo_FullGradientBlack.svg#svgView(viewBox(0, 8, 80, 145))"/>
                             <h3>Arkime</h3></a>
-                            <p class="lead mb-0">Delve into session details including full packet payloads</p>
+                            <p class="lead mb-0">Delve into <a href="/readme/docs/arkime.html">session details</a> including full packet payloads</p>
                         </div>
                     </div>
                     <div class="col-lg-3">
                         <div class="features-icons-item mx-auto mb-0 mb-lg-3">
                             <a href="/netbox/"><img style='max-width: 35%; height: auto; object-fit: contain' src="assets/img/netbox_icon.svg"/>
                             <h3>NetBox</h3></a>
-                            <p class="lead mb-0">Model and document your network infrastructure</p>
+                            <p class="lead mb-0">Model and document your <a href="/readme/docs/asset-interaction-analysis.html">network infrastructure</a></p>
                         </div>
                     </div>
                     <div class="col-lg-3">
@@ -78,21 +78,21 @@
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                             <a href="/upload/"><div class="features-icons-icon d-flex"><i class="bi-upload m-auto text-primary"></i></div>
                             <h3>Artifact Upload</h3></a>
-                            <p class="lead mb-0">Upload previously-captured PCAP files or archived Zeek logs for analysis</p>
+                            <p class="lead mb-0"><a href="/readme/docs/upload.html">Upload</a> previously-captured PCAP files or archived Zeek logs for analysis</p>
                         </div>
                     </div>
                     <div class="col-lg-3">
                         <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
                             <a href="/auth/"><div class="features-icons-icon d-flex"><i class="bi-person m-auto text-primary"></i></div>
                             <h3>Local Account Management</h3></a>
-                            <p class="lead mb-0">Manage the local user accounts maintained by Malcolm</p>
+                            <p class="lead mb-0">Manage the <a href="/readme/docs/authsetup.html#AuthBasicAccountManagement">local user accounts</a> maintained by Malcolm</p>
                         </div>
                     </div>
                     <div class="col-lg-3">
                         <div class="features-icons-item mx-auto mb-0 mb-lg-3">
                             <a href="/mapi/"><div class="features-icons-icon d-flex"><i class="bi-gear m-auto text-primary"></i></div>
                             <h3>API</h3></a>
-                            <p class="lead mb-0">Interface with Malcolm's underlying data via a REST API</p>
+                            <p class="lead mb-0">Interface with Malcolm's underlying data via a <a href="/readme/docs/api.html">REST API</a></p>
                         </div>
                     </div>
                 </div>
