landingpage work in progress (idaholab/Malcolm#252)

--- a/nginx/landingpage/index.html
+++ b/nginx/landingpage/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+    <!-- Copyright (c) 2024 Battelle Energy Alliance, LLC.  All rights reserved. -->
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -122,4 +123,5 @@
         <!-- Core theme JS-->
         <script src="js/scripts.js"></script>
     </body>
+    <!-- See, Here I'm Now By Myself, Uh, Talking To Myself. That's, That's Chaos Theory. -->
 </html>
