fix idaholab/Malcolm#335, pivot links from Arkime to Kibana in external elasticsearch are not working
Here's a list of what's been fixed/modified:

* `opensearch.env` and `dashboards.env` environment variables are now provided to `nginx-proxy` container so that the decisions for these links can be made based on them
* `envsubst` is used to expand variables into NGINX conf files in `/etc/nginx/conf.d` based on templates found in `/etc/nginx/templates`
* some custom logic in the `docker_entrpoint.sh` script for NGINX to do the environment variable substitution and some variable massaging prior to starting up NGINX
* two new environment variables in `dashboards.env.example` (blank by default but they could be manually overridden if there's more going on than we can automatically figure out based on the DASHBOARDS_URL variable:
```
NGINX_DASHBOARDS_PREFIX=
NGINX_DASHBOARDS_PROXY_PASS=
```
* not 100% related, but the landing page now shows "Kibana" with an elastic icon rather than "Dashboards" if we're in elasticsearch/kibana mode
* fixed issue with arkime to dashboards links not using correct index and time field names if those are not the defaults (see #313)
* removed some stuff left over from base image that wasn't ever really used

--- a/nginx/landingpage/index.html
+++ b/nginx/landingpage/index.html
@@ -40,8 +40,8 @@
                 <div class="row">
                     <div class="col-lg-3">
                         <div class="features-icons-item mx-auto mb-0 mb-lg-3">
-                            <a href="/dashboards/"><img style='max-width: 35%; height: auto; object-fit: contain' src="assets/img/opensearch_mark_default.svg"/>
-                            <h3>Dashboards</h3></a>
+                            <a href="MALCOLM_DASHBOARDS_URL_REPLACER"><img style='max-width: 35%; height: auto; object-fit: contain' src="assets/img/MALCOLM_DASHBOARDS_ICON_REPLACER"/>
+                            <h3>MALCOLM_DASHBOARDS_NAME_REPLACER</h3></a>
                             <p class="lead mb-0">Visualize traffic or track down security concerns with dozens of <a href="/readme/docs/dashboards.html#PrebuiltVisualizations">pre-built dashboards</a>, or <a href="/readme/docs/dashboards.html#BuildDashboard">create your own</a></p>
                         </div>
                     </div>
