fixed arkime image

--- a/nginx/landingpage/index.html
+++ b/nginx/landingpage/index.html
@@ -47,7 +47,7 @@
                     </div>
                     <div class="col-lg-3">
                         <div class="features-icons-item mx-auto mb-5 mb-lg-3">
-                            <a href="/arkime/"><img style='width: 19%; height: 19%; object-fit: contain' src="assets/img/Arkime_Logo_FullGradientBlack.svg#svgView(viewBox(0, 8, 80, 145))"/>
+                            <a href="/arkime/"><img style='width: 19%; height: 19%; object-fit: contain' src="assets/img/arkime.svg"/>
                             <h3>Arkime</h3></a>
                             <p class="lead mb-0">Delve into <a href="/readme/docs/arkime.html">session details</a> including full packet payloads</p>
                         </div>
