work in progress for idaholab/Malcolm#329, improve extracted_files download page

--- a/nginx/landingpage/index.html
+++ b/nginx/landingpage/index.html
@@ -22,18 +22,7 @@
             <div class="container"/>
         </nav>
         <!-- Masthead-->
-        <header class="masthead">
-            <div class="container position-relative">
-                <div class="row justify-content-center">
-                    <div class="col-xl-6">
-                        <div class="text-center text-white">
-                            <!-- Page heading-->
-                            <h1 class="mb-5"/>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </header>
+        <header class="masthead"/>
         <!-- Icons Grid-->
         <section class="features-icons bg-light text-center">
             <div class="container">
