work in progress for idaholab/Malcolm#329, improve extracted_files download page

--- a/nginx/landingpage/index.html
+++ b/nginx/landingpage/index.html
@@ -22,7 +22,9 @@
             <div class="container"/>
         </nav>
         <!-- Masthead-->
-        <header class="masthead"/>
+        <header class="masthead">
+            <div class="container"/>
+        </header>
         <!-- Icons Grid-->
         <section class="features-icons bg-light text-center">
             <div class="container">
